First APK commit