@@ -1,15 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    signingConfigs {
-        release {
-        }
-    }
-    compileSdkVersion 33
+    namespace 'sq.rogue.rosettadrone'
+    compileSdk 37
     defaultConfig {
         applicationId "sq.rogue.rosettadrone"
         minSdkVersion 24
-        targetSdkVersion 33
+        targetSdk 37
         versionCode 1
         versionName '5.2.0'    // This is the one to modify...
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -23,66 +21,33 @@ android {
         }
     }
 
-    dexOptions {
-        javaMaxHeapSize "4g"
-    }
 
     buildTypes {
         release {
             minifyEnabled false
             debuggable false
             jniDebuggable false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             minifyEnabled false
             debuggable true
             jniDebuggable false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             renderscriptOptimLevel 0
         }
     }
     packagingOptions {
-        pickFirst 'META-INF/LICENSE.txt' // picks the JavaMail license file
-        exclude 'META-INF/rxjava.properties'
-    }
-
-    sourceSets {
-        main {
-            jni.srcDirs = []
+        jniLibs {
+            keepDebugSymbols += ['*/*/libdjivideo.so', '*/*/libSDKRelativeJNI.so', '*/*/libFlyForbid.so', '*/*/libduml_vision_bokeh.so', '*/*/libyuv2.so', '*/*/libGroudStation.so', '*/*/libFRCorkscrew.so', '*/*/libUpgradeVerify.so', '*/*/libFR.so', '*/*/libDJIFlySafeCore.so', '*/*/libdjifs_jni.so', '*/*/libsfjni.so', '*/*/libDJICommonJNI.so', '*/*/libDJICSDKCommon.so', '*/*/libDJIUpgradeCore.so', '*/*/libDJIUpgradeJNI.so', '*/*/libDJIWaypointV2Core.so', '*/*/libAMapSDK_MAP_v6_9_2.so', '*/*/libDJIMOP.so', '*/*/libDJISDKLOGJNI.so']
+        }
+        resources {
+            excludes += ['META-INF/rxjava.properties', 'META-INF/rxjava.properties', 'assets/location_map_gps_locked.png', 'assets/location_map_gps_3d.png']
+            pickFirsts += ['META-INF/LICENSE.txt']
         }
     }
 
-    packagingOptions {
-        doNotStrip "*/*/libdjivideo.so"
-        doNotStrip "*/*/libSDKRelativeJNI.so"
-        doNotStrip "*/*/libFlyForbid.so"
-        doNotStrip "*/*/libduml_vision_bokeh.so"
-        doNotStrip "*/*/libyuv2.so"
-        doNotStrip "*/*/libGroudStation.so"
-        doNotStrip "*/*/libFRCorkscrew.so"
-        doNotStrip "*/*/libUpgradeVerify.so"
-        doNotStrip "*/*/libFR.so"
 
-        // Add the new so
-        doNotStrip "*/*/libDJIFlySafeCore.so"
-        doNotStrip "*/*/libdjifs_jni.so"
-        doNotStrip "*/*/libsfjni.so"
-
-        doNotStrip "*/*/libDJICommonJNI.so"
-        doNotStrip "*/*/libDJICSDKCommon.so"
-        doNotStrip "*/*/libDJIUpgradeCore.so"
-        doNotStrip "*/*/libDJIUpgradeJNI.so"
-
-        doNotStrip "*/*/libDJIWaypointV2Core.so"
-        doNotStrip "*/*/libAMapSDK_MAP_v6_9_2.so"
-        doNotStrip "*/*/libDJIMOP.so"
-        doNotStrip "*/*/libDJISDKLOGJNI.so"
-
-        exclude 'META-INF/rxjava.properties'
-        exclude 'assets/location_map_gps_locked.png'
-        exclude 'assets/location_map_gps_3d.png'
-    }
     externalNativeBuild {
         cmake {
             path 'CMakeLists.txt'
@@ -96,26 +61,28 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 //    ndkVersion '21.4.7075529'
 
     // We need to be restrict as we get error on newer versions...
     //   buildToolsVersion '30.0.2'
     ndkVersion '22.0.7026061'
-   android {
-        lintOptions {
-            abortOnError false //Required, due to lack of support of gradle 7
-        }
+    lint {
+        abortOnError false
+    }
+    kotlinOptions {
+        jvmTarget = "17"
     }
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.security:security-crypto:1.1.0'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     implementation 'com.squareup:otto:1.3.8'
 
     implementation('com.dji:dji-sdk:4.16.4', {
@@ -132,32 +99,32 @@ dependencies {
 
     implementation 'com.dji:dji-uxsdk:4.16'
 
-    implementation 'androidx.annotation:annotation:1.5.0'               // 1.2.0
-    implementation 'androidx.appcompat:appcompat:1.5.1'                 // 1.2.0
-    implementation 'androidx.preference:preference:1.2.0'               // 1.1.1
+    implementation 'androidx.annotation:annotation:1.10.0'               // 1.2.0
+    implementation 'androidx.appcompat:appcompat:1.7.1'                 // 1.2.0
+    implementation 'androidx.preference:preference:1.2.1'               // 1.1.1
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'        // 1.0.0
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'   // 2.0.4
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'   // 2.0.4
     implementation 'androidx.multidex:multidex:2.0.1'                   // 2.0.1
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'           // 1.1.0
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'           // 1.1.0
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'      // 2.2.0
 
     testImplementation 'junit:junit:4.13.2'                             // 4.13.2
-    testImplementation 'org.mockito:mockito-core:2.7.22'                // 2.7.22
-    testImplementation 'org.mockito:mockito-android:2.7.22'             // 2.7.22
+    testImplementation 'org.mockito:mockito-core:5.23.0'                // 2.7.22
+    testImplementation 'org.mockito:mockito-android:5.23.0'             // 2.7.22
 
-    implementation 'com.google.android.material:material:1.6.0'         // 1.3.0
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'   // 17.0.0
-    implementation 'com.google.android.gms:play-services-basement:18.1.0' // 17.6.0
-    implementation 'com.google.android.gms:play-services-base:18.2.0'   // 17.6.0
+    implementation 'com.google.android.material:material:1.14.0'         // 1.3.0
+    implementation 'com.google.android.gms:play-services-maps:20.0.0'   // 17.0.0
+    implementation 'com.google.android.gms:play-services-basement:18.10.0' // 17.6.0
+    implementation 'com.google.android.gms:play-services-base:18.10.0'   // 17.6.0
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'    // 17.0.0
-    implementation 'com.google.android.gms:play-services-location:21.0.1' // 18.0.0
-    implementation 'com.google.maps:google-maps-services:0.18.0'        // 0.18.0
+    implementation 'com.google.android.gms:play-services-location:21.3.0' // 18.0.0
+    implementation 'com.google.maps:google-maps-services:2.2.0'        // 0.18.0
 
     implementation 'com.jakewharton:butterknife:10.2.3'                 // 10.2.3
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'   // 10.2.3
-    implementation 'androidx.core:core:1.9.0'                           // 1.3.2
-    implementation 'androidx.core:core-ktx:1.9.0'                       // 1.3.2
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'   // 2.3.1
+    implementation 'androidx.core:core:1.19.0'                           // 1.3.2
+    implementation 'androidx.core:core-ktx:1.19.0'                       // 1.3.2
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0'   // 2.3.1
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31'     // 1.4.31
 
@@ -167,14 +134,32 @@ dependencies {
     // WebRTC library
     implementation 'org.webrtc:google-webrtc:1.0.32006'
     // Websocket implementation
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     // Websocket utils for event-driven approach.
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.12'
 
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
+    ]
 }
 
 
